Fix spacing.

--- a/HairSalon/wwwroot/css/styles.css
+++ b/HairSalon/wwwroot/css/styles.css
@@ -10,12 +10,16 @@ h3 {
   color: #0077b6;
 }
 
-body {
-  background-color: #000000;
+h4 {
+  color: #0077b6;
 }
 
 hr {
   color: #0077b6;
+}
+
+body {
+  background-color: #000000;
 }
 
 label {
